--- a/RestApiTesting/pom.xml
+++ b/RestApiTesting/pom.xml
@@ -40,6 +40,15 @@
 			<version>1.1.6</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
+		<dependency>
+			<groupId>io.rest-assured</groupId>
+			<artifactId>rest-assured</artifactId>
+			<version>4.5.1</version>
+			<scope>test</scope>
+		</dependency>
+
+
 		<dependency>
 
 			<groupId>org.seleniumhq.selenium</groupId>
@@ -48,6 +57,14 @@
 
 			<version>4.1.2</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/io.rest-assured/json-path -->
+		<dependency>
+			<groupId>io.rest-assured</groupId>
+			<artifactId>json-path</artifactId>
+			<version>4.5.1</version>
+		</dependency>
+
 		<dependency>
 
 			<groupId>io.github.bonigarcia</groupId>
@@ -68,6 +85,12 @@
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 			<version>31.0.1-jre</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/io.rest-assured/json-schema-validator -->
+		<dependency>
+			<groupId>io.rest-assured</groupId>
+			<artifactId>json-schema-validator</artifactId>
+			<version>4.5.1</version>
 		</dependency>
 
 
